--- a/ui/typescript/src/assets/css/globals.css
+++ b/ui/typescript/src/assets/css/globals.css
@@ -4,15 +4,15 @@
 
 @layer base {
   :root {
-    --color-brand: 0 158 96;
+    --color-brand: 96 165 250;
   }
   html {
     @apply bg-body font-body;
     -webkit-tap-highlight-color: transparent;
   }
 
-  html.dark {
-    @apply bg-dark text-white;
+  html.light {
+    @apply bg-light text-black;
   }
 
   html,
@@ -128,6 +128,11 @@ Styles for Swiper slider
   @apply flex flex-col items-center justify-center;
 }
 
+.card-selected_button {
+  box-shadow: 0 0px 17px gray;
+  margin: 1px;
+  outline: 2px solid grey;
+}
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -155,7 +160,7 @@ Styles for Swiper slider
   border-radius: 10px;
 }
 
-.dark .swiper-pagination-bullet {
+.light .swiper-pagination-bullet {
   --swiper-pagination-bullet-inactive-color: #334155;
   --swiper-pagination-color: #475569;
 }
